k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: quickhire-production
  labels:
    app: quickhire
    env: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: quickhire-staging
  labels:
    app: quickhire
    env: staging
